maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: not found: value dir
    if (getDirection==dir() && !estFaceMur()) {
                      ^